--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { git = "https://github.com/bevyengine/bevy" }
+# bevy = { git = "https://github.com/bevyengine/bevy" }
+bevy = { version = "0.13" }
+bevy-inspector-egui = "0.23.4"
 rand = "0.8.5"
