--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-# bevy = { git = "https://github.com/bevyengine/bevy" }
-bevy = { version = "0.13" }
+bevy = { version = "0.13", features = ["dynamic_linking"] }
 bevy-inspector-egui = "0.23.4"
+bevy_mod_debugdump = "0.10.0"
 rand = "0.8.5"
+
+[features]
+default = []
+flow = []
